[package]
name = "audace_labs-assignment"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
io-uring = "0.7.0"
libc = "0.2.159"
mio = "1.0.2"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
tungstenite = { version = "0.24.0", features = ["native-tls"] }
url = "2.5.2"
